# grounding_agent

./: .gitignore  BRIEF.md  CLAUDE.md  LICENSE  PRESENTATION.md  README.md  WRITEUP.md  errors.md  knowledge.md  pyproject.toml
code_review/: 2026-05-12-compare.md  2026-05-12-contract.md  2026-05-12-judges-runner-evaluator.md  2026-05-12-taxonomy.md  2026-05-13-module-size.md  2026-05-13-results-audit.md
data/: contract.json  contract.tau3.iter3.json  tasks.json
data/variants/: v2_preamble.md
grounding_agent/: compare.py  contract.py  evaluator.py  eventlog.py  judges.py  runner.py  taxonomy.py
grounding_agent/judges/: __init__.py  _common.py  _deterministic.py  _semantic.py
results/: comparison.iter2.md  comparison.md  comparison.pre.md  comparison.tau3.iter1.md  comparison.tau3.iter2.md  forensics.md  forensics_tau3.md  forensics_tau3_v3.md  forensics_v2.md  forensics_v3.md  tau1_vs_tau3.md  v0_results.iter2.json  v0_results.json  v0_results.pre.json  v0_results.tau3.iter1.json  v0_results.tau3.iter2.json  v2_results.iter2.json  v2_results.pre.json  v2_results.tau1.iter3.json  v2_results.tau3.iter1.json  v2_results.tau3.iter2.json
scripts/: compare_to_reward.py  generate_contract.py  run_eval.py  smoke_test.py
tests/: test_compare.py  test_contract.py  test_evaluator.py  test_eventlog.py  test_judges.py  test_runner.py  test_taxonomy.py
