[project]
name = "grounding_agent"
version = "0.1.0"
description = "Evaluation framework for tool-calling LLM agents — Meraki Labs Work Trial PS4"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.41.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "tau_bench @ git+https://github.com/sierra-research/tau-bench.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["grounding_agent*"]
