[project]
name = "grounding_agent"
version = "0.1.0"
description = "Evaluation framework for tool-calling LLM agents — Meraki Labs Work Trial PS4"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.41.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    # τ³-bench (March 2026). The repo is named tau2-bench but ships
    # the current τ³-bench version with the airline-task fixes. The
    # original τ-bench (sierra-research/tau-bench) is obsolete — see
    # results/tau1_vs_tau3.md for the migration story.
    "tau2 @ git+https://github.com/sierra-research/tau2-bench.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["grounding_agent*"]
